--- a/blocks/content/content.css
+++ b/blocks/content/content.css
@@ -3,13 +3,13 @@
     grid-row-gap: 92px;
   }
   
-  @media screen and (max-width: 984px) {
+  @media screen and (max-width: 1024) and (min-width: 769px) {
     .content {
       grid-row-gap: 88px;
     }
   }
   
-  @media screen and (max-width: 568px) {
+  @media screen and (max-width: 768px)  and (min-width: 321px) {
     .content {
       grid-row-gap: 64px;
     }
