--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -32,19 +32,19 @@
     opacity: .8;
   }
   
-  @media screen and (max-width: 1140px) {
+  @media screen and (max-width: 1024) and (min-width: 769px) {
     .cover__background {
       min-height: 640px;
     }
   }
   
-  @media screen and (max-width: 984px) {
+  @media screen and (max-width: 768px)  and (min-width: 321px) {
     .cover__background {
       min-height: 480px;
     }
   }
   
-  @media screen and (max-width: 568px) {
+  @media screen and (max-width: 320px) {
     .cover__background {
       min-height: 200px;
     }
