--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -7,7 +7,7 @@
     margin: 0 0 16px;
   }
 
-  @media screen and (max-width: 568px) {
+  @media screen and (max-width: 768px)  and (min-width: 321px) {
     .cover__title {
       font-size: 32px;
       line-height: 1.1;
