--- a/blocks/footer/__container/footer__container.css
+++ b/blocks/footer/__container/footer__container.css
@@ -5,7 +5,7 @@
     margin: 0;
   }
   
-  @media screen and (max-width: 568px) {
+  @media screen and (max-width: 768px)  and (min-width: 321px) {
     .footer__container {
       flex-direction: column;
       align-items: flex-start;
