--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -4,7 +4,7 @@
     line-height: 1.14;
   }
   
-  @media screen and (max-width: 568px) {
+  @media screen and (max-width: 768px)  and (min-width: 321px) {
     .footer__copyright {
       line-height: 1;
     }
