--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -14,7 +14,7 @@
     opacity: 80%;
   }
   
-  @media screen and (max-width: 568px) {
+  @media screen and (max-width: 768px)  and (min-width: 321px) {
     .footer__link {
       font-size: 24px;
       line-height: 1;
