--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -9,7 +9,7 @@
     margin: 0;
   }
   
-  @media screen and (max-width: 568px) {
+  @media screen and (max-width: 768px)  and (min-width: 321px) {
     .footer__links {
       margin: 0 0 32px;
     }
