--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -5,14 +5,14 @@
     justify-content: space-between;
   }
   
-  @media screen and (max-width: 984px) {
+  @media screen and (max-width: 1024) and (min-width: 769px) {
     .footer {
       width: calc(100% - 2 * 24px);
       margin: 88px auto 24px;
     }
   }
   
-  @media screen and (max-width: 568px) {
+  @media screen and (max-width: 768px)  and (min-width: 321px) {
     .footer {
       width: calc(100% - 2 * 16px);
       margin: 64px auto 24px;
