--- a/blocks/intro/__container/list__container.css
+++ b/blocks/intro/__container/list__container.css
@@ -2,13 +2,19 @@
     max-width: 690px;
   }
   
-  @media screen and (max-width: 984px) {
+  @media screen and (max-width: 1024) and (min-width: 769px) {
+    .intro__container {
+      max-width: 690px;
+    }
+  }
+  
+  @media screen and (max-width: 768px)  and (min-width: 321px) {
     .intro__container {
       max-width: 720px;
     }
   }
-  
-  @media screen and (max-width: 568px) {
+
+  @media screen and (max-width: 320px) {
     .intro__container {
       max-width: 288px;
     }
