--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -32,13 +32,13 @@
     opacity: .8;
   }
   
-  @media screen and (max-width: 1024) and (min-width: 769px) {
+  @media screen and (max-width: 1024px) {
     .cover__background {
       min-height: 640px;
     }
   }
   
-  @media screen and (max-width: 768px)  and (min-width: 321px) {
+  @media screen and (max-width: 768px) {
     .cover__background {
       min-height: 480px;
     }
