--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -8,7 +8,7 @@
   }
   
   
-  @media screen and (max-width: 768px)  and (min-width: 321px) {
+  @media screen and (max-width: 320px) {
     .cover__subtitle {
       font-size: 14px;
       line-height: 1.14;
