--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -7,11 +7,11 @@
     margin: 0 0 16px;
   }
 
-  @media screen and (max-width: 768px)  and (min-width: 321px) {
+  @media screen and (max-width: 320px) {
     .cover__title {
       font-size: 32px;
       line-height: 1.1;
-      max-width: 248px;
+      max-width: 288px;
       margin: 0 0 8px;
     }
   }
