--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,11 +1,11 @@
 .footer__copyright {
     margin: 0;
     font-size: 14px;
-    line-height: 1.14;
+    line-height: 16px;
   }
   
-  @media screen and (max-width: 768px)  and (min-width: 321px) {
+  @media screen and (max-width: 320px) {
     .footer__copyright {
-      line-height: 1;
+      line-height: 14px;
     }
   }
