--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -2,21 +2,21 @@
     text-decoration: none;
     color: white;
     font-size: 16px;
-    line-height: 1.12;
+    line-height: 18px;
     transition: opacity 0.3s ease;
   }
-  
+
+  .footer__link:hover {
+    opacity: 80%;
+  }  
+
   .footer__link:last-of-type {
     margin: 0;
   }
   
-  .footer__link:hover {
-    opacity: 80%;
-  }
-  
-  @media screen and (max-width: 768px)  and (min-width: 321px) {
+  @media screen and (max-width:  320px) {
     .footer__link {
       font-size: 24px;
-      line-height: 1;
+      line-height: 24px;
     }
   }
