--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -2,18 +2,18 @@
   color: white;
   text-decoration: none;
   font-size: 24px;
-  line-height: 1.1666;
+  line-height: 28px;
   font-weight: 400;
-  transition: opacity 0.2s ease;
+  transition: opacity 0.3s ease;
   }
 
 .header__lang-link:hover {
   opacity: 80%;
 }
 
-@media screen and (max-width: 768px)  and (min-width: 321px) {
+@media screen and (max-width: 320px) {
   .header__lang-link {
     font-size: 18px;
-    line-height: 1.1;
+    line-height: 20px;
   }
 }
