--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -1,7 +1,8 @@
 .intro__text {
+  font-family: 'Inter';
   margin-top: 40px;
   font-size: 16px;
-  line-height: 1.63;
+  line-height: 163%;
   font-weight: 400;
   font-style: normal;
 }
