--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,16 +1,16 @@
 .intro__title {
-    font-size: 54px;
-    line-height: 1.07;
-    font-style: normal;
     font-weight: 900;
+    font-size: 54px;
+    line-height: 58px;
+    font-style: normal;
     margin: 0;
     padding: 0;
     text-rendering: optimizeLegibility;
   }
   
-  @media screen and (max-width: 568px) {
+  @media screen and (max-width: 320px) {
     .intro__title {
       font-size: 32px;
-      line-height: 1.1;
+      line-height: 35px;
     }
   }
