--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,18 +1,18 @@
 .lead__subtitle {
+    font-size:30px;
+    line-height: 36px;
+    font-weight: 400;
     max-width: 640px;
     margin: 32px auto 0;
-    font-size:30px;
-    line-height: 1.2;
-    font-weight: 400;
     font-style: normal;
     text-align: center;
   }
   
-  @media screen and (max-width: 568px) {
+  @media screen and (max-width: 320px) {
     .lead__subtitle {
-      margin: 16px 0 0;
       font-size: 16px;
-      line-height: 1.25;
+      line-height: 20px;
       max-width: 288px;
+      margin: 16px 0 0;
     }
   }
