--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,19 +1,20 @@
 .lead__title {
-    max-width: 720px;
+    
     font-size: 96px;
+    line-height: 100px;
     font-weight: 900;
     font-style: normal;
-    line-height: 1.04;
+    max-width: 720px;
     margin: 0;
     padding: 0;
     text-align: center;
     text-rendering: optimizeLegibility;
   }
   
-  @media screen and (max-width:568px) {
+  @media screen and (max-width: 320px) {
     .lead__title {
       font-size: 40px;
-      line-height: 1.1;
+      line-height: 44px;
       max-width: 288px;
     }
   }
