--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,17 +1,17 @@
 .cover__title {
-    font-size: 72px;
-    line-height: 1.05;
-    text-align: center;
-    font-weight: 900;
-    max-width: 560px;
-    margin: 0 0 16px;
-  }
+  font-size: 72px;
+  line-height: 76px;
+  text-align: center;
+  font-weight: 900;
+  max-width: 560px;
+  margin: 0 0 16px;
+}
 
   @media screen and (max-width: 320px) {
-    .cover__title {
-      font-size: 32px;
-      line-height: 1.1;
-      max-width: 288px;
-      margin: 0 0 8px;
-    }
+  .cover__title {
+    font-size: 32px;
+    line-height: 35px;
+    max-width: 288px;
+    margin: 0 0 8px;
   }
+}
