--- a/blocks/footer/__container/footer__container.css
+++ b/blocks/footer/__container/footer__container.css
@@ -1,13 +1,13 @@
 .footer__container {
-    display: flex;
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-  }
+  display: flex;
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
   
-  @media screen and (max-width: 768px)  and (min-width: 321px) {
-    .footer__container {
-      flex-direction: column;
-      align-items: flex-start;
-    }
+@media screen and (max-width: 320px) {
+  .footer__container {
+    flex-direction: column;
+    align-items: flex-start;
   }
+}
