--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -1,20 +1,20 @@
 .footer__links {
-    display: flex;
-    justify-content: space-around;
-    text-align: center;
-    margin-right: 18px;
+  display: flex;
+  justify-content: space-around;
+  text-align: center;
+  margin-right: 18px;
+}
+  
+.footer__links:last-of-type {
+  margin: 0;
+}
+  
+@media screen and (max-width: 320px) {
+  .footer__links {
+    margin: 0 0 32px;
   }
   
-  .footer__links:last-of-type {
-    margin: 0;
+.footer__links:last-of-type {
+    margin-bottom: 48px;
   }
-  
-  @media screen and (max-width: 768px)  and (min-width: 321px) {
-    .footer__links {
-      margin: 0 0 32px;
-    }
-  
-    .footer__links:last-of-type {
-      margin-bottom: 48px;
-    }
-  }
+}
