--- a/blocks/place/__title/place_title.css
+++ b/blocks/place/__title/place_title.css
@@ -1,24 +1,24 @@
 .place__title {
-    font-size: 72px;
-    line-height: 1.05;
-    font-weight: 900;
-    margin: 0;
-    align-self: center;
-    text-rendering: optimizeLegibility;
-  }
+  font-size: 72px;
+  line-height: 76px;
+  font-weight: 900;
+  margin: 0;
+  align-self: center;
+  text-rendering: optimizeLegibility;
+}
   
-  @media screen and (max-width: 984px) {
-    .place__title {
-      font-size: 42px;
-      line-height: 1.1;
-    }
+@media screen and (max-width: 768px) {
+  .place__title {
+    font-size: 42px;
+    line-height: 46px;
   }
+}
   
-  @media screen and (max-width: 568px) {
-    .place__title {
-      font-size: 32px;
-      line-height: 1.09;
-      margin-left: 16px;
-      margin-bottom: 16px;
-    }
+@media screen and (max-width: 320px) {
+  .place__title {
+    font-size: 32px;
+    line-height: 35px;
+    margin-left: 16px;
+    margin-bottom: 16px;
   }
+}
