--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -1,16 +1,16 @@
 .place__url-heading {
-    font-weight: normal;
-    font-size: 12px;
-    line-height: 170%;
-    letter-spacing: 2px;
-    color: #AAAAAA;
-    margin: 0 0 12px;
-  }
+  font-size: 12px;
+  line-height: 12px;
+  font-weight: normal;
+  color: #AAAAAA;
+  margin: 0 0 12px;
+  letter-spacing: 2px;
+}
   
-  @media screen and (max-width: 984px) {
-    .place__url-heading {
-      font-size: 12px;
-      line-height: 1;
-      letter-spacing: 2px;
-    }
+@media screen and (max-width: 768px) {
+  .place__url-heading {
+    font-size: 12px;
+    line-height: 12px;
+    letter-spacing: 2px;
   }
+}
