--- a/fonts/inter.css
+++ b/fonts/inter.css
@@ -1,88 +1,53 @@
 @font-face {
-  font-family: 'Inter';
-  font-style:  normal;
-  font-weight: 100;
-  font-display: swap;
-  src: url("../fonts/Inter-Thin.woff2") format("woff2"),
-       url("../fonts/Inter-Thin.woff") format("woff");
-}
-@font-face {
-  font-family: 'Inter';
-  font-style:  italic;
-  font-weight: 100;
-  font-display: swap;
-  src: url("../fonts/Inter-ThinItalic.woff2") format("woff2"),
-       url("../fonts/Inter-ThinItalic.woff") format("woff");
-}
-
-@font-face {
-  font-family: 'Inter';
-  font-style:  normal;
-  font-weight: 200;
-  font-display: swap;
-  src: url("../fonts/Inter-ExtraLight.woff2") format("woff2"),
-       url("../fonts/Inter-ExtraLight.woff") format("woff");
-}
-
-@font-face {
-  font-family: 'Inter';
-  font-style:  normal;
-  font-weight: 300;
-  font-display: swap;
-  src: url("../fonts/Inter-Light.woff2") format("woff2"),
-       url("../fonts/Inter-Light.woff") format("woff");
-}
-
-@font-face {
-  font-family: 'Inter';
-  font-style:  normal;
-  font-weight: 400;
-  font-display: swap;
   src: url("../fonts/Inter-Regular.woff2") format("woff2"),
-       url("../fonts/Inter-Regular.woff") format("woff");
+       url("../fonts/Inter-Regular.woff") format("woff"),
+       url("../fonts/Inter-Regular.otf") format("otf"),
+       url("../fonts/Inter-Regular.ttf") format("truetype");
+  font-family: 'Inter';
+  font-weight: 400;
 }
 
 @font-face {
-  font-family: 'Inter';
-  font-style:  normal;
-  font-weight: 500;
-  font-display: swap;
   src: url("../fonts/Inter-Medium.woff2") format("woff2"),
-       url("../fonts/Inter-Medium.woff") format("woff");
+       url("../fonts/Inter-Medium.woff") format("woff"),
+       url("../fonts/Inter-Medium.otf") format("otf"),
+       url("../fonts/Inter-Medium.ttf") format("truetype");
+  font-family: 'Inter';
+  font-weight: 500;
 }
 
 @font-face {
-  font-family: 'Inter';
-  font-style:  normal;
-  font-weight: 600;
-  font-display: swap;
   src: url("../fonts/Inter-SemiBold.woff2") format("woff2"),
-       url("../fonts/Inter-SemiBold.woff") format("woff");
+       url("../fonts/Inter-SemiBold.woff") format("woff"),
+       url("../fonts/Inter-SemiBold.otf") format("otf"),
+       url("../fonts/Inter-SemiBold.ttf") format("truetype");
+  font-family: 'Inter';
+  font-weight: 600;
 }
 
 @font-face {
-  font-family: 'Inter';
-  font-style:  normal;
-  font-weight: 700;
-  font-display: swap;
   src: url("../fonts/Inter-Bold.woff2") format("woff2"),
-       url("../fonts/Inter-Bold.woff") format("woff");
+       url("../fonts/Inter-Bold.woff") format("woff"),
+       url("../fonts/Inter-Bold.otf") format("otf"),
+       url("../fonts/Inter-Bold.ttf") format("truetype");
+  font-family: 'Inter';
+  font-weight: 700;
 }
 
 @font-face {
-  font-family: 'Inter';
-  font-style:  normal;
-  font-weight: 800;
-  font-display: swap;
   src: url("../fonts/Inter-ExtraBold.woff2") format("woff2"),
-       url("../fonts/Inter-ExtraBold.woff") format("woff");
+       url("../fonts/Inter-ExtraBold.woff") format("woff"),
+       url("../fonts/Inter-ExtraBold.otf") format("otf"),
+       url("../fonts/Inter-ExtraBold.ttf") format("truetype");
+  font-family: 'Inter';
+  font-weight: 800; 
 }
 
 @font-face {
-  font-family: 'Inter';
-  font-style:  normal;
-  font-weight: 900;
-  font-display: swap;
   src: url("../fonts/Inter-Black.woff2") format("woff2"),
-       url("../fonts/Inter-Black.woff") format("woff");
+       url("../fonts/Inter-Black.woff") format("woff"),
+       url("../fonts/Inter-Black.otf") format("otf"),
+       url("../fonts/Inter-Black.ttf") format("truetype");
+  font-family: 'Inter';
+  font-weight: 900;
 }
