--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,22 +1,14 @@
 .lead__caption {
-  font-size: 10px;
-  font-weight: 400;
-  line-height: 14px;
-  font-style: normal;
-  margin: 8px auto 0;
-  padding: 0;
+  margin: 5px 0 0;
+  font-size: 0.625rem;
+  font-weight: normal;
+  line-height: 0.875rem;
   text-transform: uppercase;
   letter-spacing: 1.5px;
 }
-  
+
 @media screen and (max-width: 768px) {
   .lead__caption {
-    margin-left: 24px;
-  }
-}
-
-@media screen and (max-width: 320px) {
-  .lead__caption {
-    margin-left: 16px;
+    padding: 0 calc(1rem + (100vw - 320px) / (768 - 320) * (24 - 16));
   }
 }
