--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,17 +1,16 @@
 .lead__image {
-  max-width: 100%;
-  margin: 64px 0 0;
-  padding: 0;
+  width: 100%;
+  margin: 4rem auto 0;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1280px) {
   .lead__image {
-    margin: 56px auto 0;
+    margin: calc(3.5rem + (100vw - 1024px) / (1280 - 1024) * (64 - 56)) auto 0;
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 768px) {
   .lead__image {
-    margin: 40px auto 0;
+    margin: calc(2.5rem + (100vw - 320px) / (768 - 320) * (56 - 40)) auto 0;
   }
 }
