--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,18 +1,16 @@
 .lead__subtitle {
-  font-size:30px;
-  line-height: 36px;
-  font-weight: 400;
   max-width: 640px;
-  margin: 32px auto 0;
-  font-style: normal;
+  margin: 2rem auto 0;
   text-align: center;
+  font-size: 1.875rem;
+  font-weight: normal;
+  line-height: calc(36 / 30);
 }
-  
-@media screen and (max-width: 320px) {
+
+@media screen and (max-width: 768px) {
   .lead__subtitle {
-    font-size: 16px;
-    line-height: 20px;
-    max-width: 288px;
-    margin: 16px 0 0;
+    margin: calc(1rem + (100vw - 320px) / (768 - 320) * (32 - 16)) auto 0;
+    padding: 0 1rem;
+    font-size: calc(1rem + (100vw - 320px) / (768 - 320) * (30 - 16));
   }
 }
