--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,19 +1,14 @@
-.lead__title {  
-  font-size: 96px;
-  line-height: 100px;
-  font-weight: 900;
-  font-style: normal;
+.lead__title {
   max-width: 720px;
-  margin: 0;
-  padding: 0;
+  margin: 0 auto;
   text-align: center;
-  text-rendering: optimizeLegibility;
+  font-size: 6rem;
+  font-weight: 900;
+  line-height: calc(100 / 96);
 }
-  
-@media screen and (max-width: 320px) {
+
+@media screen and (max-width: 768px) {
   .lead__title {
-    font-size: 40px;
-    line-height: 44px;
-     max-width: 288px;
+    font-size: calc(2.5rem + (100vw - 320px) / (768 - 320) * (96 - 40));
   }
 }
