--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,24 +1,21 @@
 .lead {
-  max-width: 984px;
-  margin: 3.5rem auto 0;
-  padding: 0 3rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: calc(100% - 2 * 148px);
+  margin: 56px auto 0;
 }
-
+  
 @media screen and (max-width: 1024px) {
   .lead {
-    margin: calc(2.5rem + (100vw - 768px) / (1024 - 768) * (56 - 48)) auto 0;
-    padding: 0 calc((100vw - 768px) / (1024 - 768) * 48);
+    width: calc(100% - 2 * 48px);
+    margin: 48px auto 0;
   }
 }
-
+  
 @media screen and (max-width: 768px) {
   .lead {
-    margin: calc(2.5rem + (100vw - 320px) / (768 - 320) * (56 - 48)) auto 0;
-  }
-}
-
-@media screen and (max-width: 425px) {
-  .lead {
-    margin: 3.25rem auto 0;
+    width: 100%;
+    margin-top: 48px;
   }
 }
