--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -1,5 +1,5 @@
 .intro__text {
-  font-family: 'Inter';
+  font-family: 'Inter', Arial, sans-serif;
   margin-top: 40px;
   font-size: 16px;
   line-height: 163%;
