--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,6 +1,6 @@
 .cover__subtitle {
   font-size: 18px;
-  line-height: 22px;
+  line-height: 1.22;
   text-align: center;
   font-weight: 400;
   max-width: 360px;
@@ -11,7 +11,7 @@
 @media screen and (max-width: 320px) {
   .cover__subtitle {
     font-size: 14px;
-    line-height: 16px;
+    line-height: 1.14;
     max-width: 288px;
     margin: 8px 0 0;
   }
