--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,6 +1,6 @@
 .cover__title {
   font-size: 72px;
-  line-height: 76px;
+  line-height: 1.05;
   text-align: center;
   font-weight: 900;
   max-width: 560px;
@@ -10,8 +10,8 @@
   @media screen and (max-width: 320px) {
   .cover__title {
     font-size: 32px;
-    line-height: 35px;
-    max-width: 288px;
+    line-height: 1.1;
+    max-width: 248px;
     margin: 0 0 8px;
   }
 }
