--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -2,8 +2,8 @@
   text-decoration: none;
   color: white;
   font-size: 16px;
-  line-height: 18px;
-  transition: opacity 0.8s ease;
+  line-height: 1.12;
+  transition: opacity 0.3s ease;
 }
 
 .footer__link:last-of-type {
@@ -17,6 +17,6 @@
 @media screen and (max-width:  320px) {
   .footer__link {
     font-size: 24px;
-    line-height: 24px;
+    line-height: 1;
   }
 }
