--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,10 +1,10 @@
 .header__lang-link {
   color: white;
   font-size: 24px;
-  line-height: 28px;
+  line-height: 1.1666;
   font-weight: 400;
   text-decoration: none;
-  transition: opacity 0.4s ease;
+  transition: opacity 0.2s ease;
   }
 
 .header__lang-link:hover {
@@ -14,6 +14,6 @@
 @media screen and (max-width: 320px) {
   .header__lang-link {
     font-size: 18px;
-    line-height: 20px;
+    line-height: 1.1;
   }
 }
