--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -1,6 +1,6 @@
 .intro__list {
   font-size: 12px;
-  line-height: 18px;
+  line-height: 1.5;
   font-weight: 400;
   list-style: none;
   padding: 0;
