--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -1,8 +1,7 @@
 .intro__text {
-  font-family: 'Inter', Arial, sans-serif;
   margin-top: 40px;
   font-size: 16px;
-  line-height: 163%;
+  line-height: 1.63;
   font-weight: 400;
   font-style: normal;
 }
