--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,7 +1,7 @@
 .intro__title {
   font-weight: 900;
   font-size: 54px;
-  line-height: 58px;
+  line-height: 1.07;
   font-style: normal;
   margin: 0;
   padding: 0;
@@ -11,6 +11,6 @@
 @media screen and (max-width: 320px) {
   .intro__title {
     font-size: 32px;
-    line-height: 35px;
+    line-height: 1.1;
   }
 }
