--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,7 +1,7 @@
 .lead__caption {
   font-size: 10px;
   font-weight: 400;
-  line-height: 14px;
+  line-height: 1.4;
   font-style: normal;
   margin: 8px auto 0;
   padding: 0;
