--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,6 +1,6 @@
 .lead__subtitle {
   font-size:30px;
-  line-height: 36px;
+  line-height: 1.2;
   font-weight: 400;
   max-width: 640px;
   margin: 32px auto 0;
@@ -11,7 +11,7 @@
 @media screen and (max-width: 320px) {
   .lead__subtitle {
     font-size: 16px;
-    line-height: 20px;
+    line-height: 1.25;
     max-width: 288px;
     margin: 16px 0 0;
   }
