--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,6 +1,6 @@
 .lead__title {  
   font-size: 96px;
-  line-height: 100px;
+  line-height: 1.04;
   font-weight: 900;
   font-style: normal;
   max-width: 720px;
@@ -13,7 +13,7 @@
 @media screen and (max-width: 320px) {
   .lead__title {
     font-size: 40px;
-    line-height: 44px;
+    line-height: 1.1;
      max-width: 288px;
   }
 }
