--- a/blocks/place/__title/place_title.css
+++ b/blocks/place/__title/place_title.css
@@ -1,6 +1,6 @@
 .place__title {
   font-size: 72px;
-  line-height: 76px;
+  line-height: 1.05;
   font-weight: 900;
   margin: 0;
   align-self: center;
@@ -10,14 +10,14 @@
 @media screen and (max-width: 768px) {
   .place__title {
     font-size: 42px;
-    line-height: 46px;
+    line-height: 1.1;
   }
 }
   
 @media screen and (max-width: 320px) {
   .place__title {
     font-size: 32px;
-    line-height: 35px;
+    line-height: 1.09;
     margin-left: 16px;
     margin-bottom: 16px;
   }
