--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -1,6 +1,6 @@
 .place__url-heading {
   font-size: 12px;
-  line-height: 12px;
+  line-height: 170%;
   font-weight: normal;
   color: #AAAAAA;
   margin: 0 0 12px;
@@ -10,7 +10,7 @@
 @media screen and (max-width: 768px) {
   .place__url-heading {
     font-size: 12px;
-    line-height: 12px;
+    line-height: 1;
     letter-spacing: 2px;
   }
 }
