--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -3,7 +3,7 @@
   color: #fff;
   text-decoration: none;
   box-sizing: border-box;
-  background-image: url('./../../../sprint-3-images/sprint-3-images/cover-trains.jpg');
+  background-image: url(./../../../sprint-3-images/sprint-3-images/cover-trains.jpg);
   background-position: center;
   background-size: cover;
   display: flex;
@@ -16,35 +16,35 @@
 }
   
 .cover__background::before {
-  position: absolute;
+  content: "";
   background: #2A2C2F;
   opacity: .3;
-  content: "";
+  position: absolute;
   top: 0;
-  bottom: 0;
   right: 0;
+  bottom: 0;
   left: 0;
   z-index: -1;
   transition: opacity 0.5s ease-in-out;
 }
-  
+
 .cover__background:hover::before {
   opacity: .8;
 }
-  
-@media screen and (max-width: 1024px) {
+
+@media screen and (max-width: 1140px) {
   .cover__background {
     min-height: 640px;
   }
 }
-  
-@media screen and (max-width: 768px) {
+
+@media screen and (max-width: 984px) {
   .cover__background {
     min-height: 480px;
   }
 }
-  
-@media screen and (max-width: 320px) {
+
+@media screen and (max-width: 568px) {
   .cover__background {
     min-height: 200px;
   }
