--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -10,9 +10,10 @@
 
 @media screen and (max-width: 568px) {
   .lead__subtitle {
-    margin: 16px 0 0;
+    min-width: 288px;
+    margin: 16px auto 40px;
+    padding: 0 16px;
     font-size: 16px;
-    line-height: 1.25;
-    max-width: 288px;
+    line-height: 20px;
   }
 }
