--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -10,10 +10,17 @@
   text-rendering: optimizeLegibility;
 }
 
-@media screen and (max-width: 568px) {
+@media screen and (min-width: 768px) and (max-width: 1023px) {
   .lead__title {
+    padding: 0 24px;
+  }
+}
+
+@media screen and (max-width:568px) {
+  .lead__title {
+    min-width: 288px;
+    padding: 0 16px;
     font-size: 40px;
-    line-height: 1.1;
-    max-width: 288px;
+    line-height: 44px;
   }
 }
