--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,31 +1,18 @@
 .header {
-    margin: 0 auto;
-    padding: 0;
-    max-width: 1184px;
-    width: calc(100% - 96px);
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    box-sizing: border-box;
+  display: flex;
+  width: calc(100% - 2 * 48px);
+  margin: 0 auto;
+  justify-content: space-between;
+}
+
+@media screen and (max-width: 984px) {
+  .header {
+      width: calc(100% - 2 * 24px);
   }
-  
-  /* 1024 */
-  @media screen and (max-width: 1024px) {
-    .header {
-      max-width: 928px;
-    }
+}
+
+@media screen and (max-width: 568px) {
+  .header {
+      width: calc(100% - 2 * 16px);
   }
-  
-  /* 768 */
-  @media screen and (max-width: 768px) {
-    .header {
-      width: calc(100% - 48px);
-    }
-  }
-  
-  
-  @media screen and (max-width: 480px) {
-    .header {
-      width: calc(100% - 32px);
-    }
-  }
+}
