--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -16,6 +16,12 @@
   }
 }
 
+@media screen and (min-width:569px) and (max-width: 767px) {
+  .lead__title {
+    font-size: 80px;
+  }
+}
+
 @media screen and (max-width:568px) {
   .lead__title {
     min-width: 288px;
